tests/Checker/everything/errors/24b.vc
int main() {
    while (false) {}
    continue;
    return 1;
}
